# dotfiles

./: README.md  flake.nix  justfile  nix-devshell-findings-and-plan.md
devshells/: flake.nix
fish/conf.d/: abbr.fish
fish/functions/: decode-jwt.fish  xh-update-session.fish
home-manager/: agent-allowlist.nix  aws-sso.nix  common.nix  git.nix  nixvim-config.nix  nvim.nix  ops-env.nix  poetry.nix  profile.nix  pytools.nix  shell.nix  unfree.nix
just/: wrapper.just
nvim/lua/: settings.lua
nvim/lua/config/: autocmds.lua  keymaps.lua  settings.lua
nvim/lua/repo/: localconfig.lua
planning-docs/: maintainability-plan.md
py/: fold_scalars_yaml.py
scripts/: fish-default-shell.fish  validate-devshells
tests/devshells/fixtures/poetry-minimal-313/: pyproject.toml
tests/devshells/fixtures/poetry-minimal-314/: pyproject.toml
tmux/: tmux.conf
zsh/: aws-sso.zsh  init.zsh
