[tool.poetry]
name = "poetry-minimal-314"
version = "0.1.0"
description = "Minimal fixture for py314-poetry validation"
authors = ["Fixture <fixture@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.14,<3.15"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
